<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/settingsQuitFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="closeSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/settingsViewTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            android:onClick="closeSettingsButton"
            android:text="@string/settings_title"
            android:textAlignment="gravity"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/settingsScrollFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:scrollbarStyle="outsideOverlay"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="@id/settingsLayout"
        app:layout_constraintTop_toBottomOf="@id/settingsQuitFrame"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:id="@+id/settingsFrame"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addFavAppButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:onClick="openAddFavAppList"
                android:text="@string/settings_addfavapp"
                android:textAlignment="gravity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/settingsDivider1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"/>

            <Switch
                android:id="@+id/runAndQuit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:checkable="true"
                android:gravity="start"
                android:text="@string/settings_runandquit"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:id="@+id/settingsDivider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider"/>

            <Switch
                android:id="@+id/adaptiveIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:checkable="true"
                android:gravity="start"
                android:text="@string/settings_adapticon"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <RadioGroup
                android:id="@+id/colorRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:gravity="end"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/btnGreen"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:textAlignment="center"
                    android:background="@color/green" />
                <RadioButton
                    android:id="@+id/btnBlack"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:textAlignment="center"
                    android:background="@color/black" />
                <RadioButton
                    android:id="@+id/btnWhite"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:textAlignment="center"
                    android:background="@color/white" />
                <RadioButton
                    android:id="@+id/btnBlue"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:textAlignment="center"
                    android:background="@color/blue" />
                <RadioButton
                    android:id="@+id/btnRed"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:textAlignment="center"
                    android:background="@color/red" />
                <RadioButton
                    android:id="@+id/btnLevander"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:textAlignment="center"
                    android:background="@color/levander" />
                <RadioButton
                    android:id="@+id/btnGray"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:textAlignment="center"
                    android:background="@color/gray" />
                <RadioButton
                    android:id="@+id/btnPurple"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:textAlignment="center"
                    android:background="@color/purple" />
                <RadioButton
                    android:id="@+id/btnOlive"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:textAlignment="center"
                    android:background="@color/olive" />
                <RadioButton
                    android:id="@+id/btnLightblue"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:button="@null"
                    android:textAlignment="center"
                    android:background="@color/lightblue" />
            </RadioGroup>

            <Switch
                android:id="@+id/textColorMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:checkable="true"
                android:gravity="start"
                android:text="@string/settings_text_color"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <Switch
                android:id="@+id/darkMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:checkable="true"
                android:gravity="start"
                android:text="@string/settings_dark_mode"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:id="@+id/settingsDivider0"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/infoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:gravity="start"
                android:onClick="openAddFavAppList"
                android:text="@string/app_name"
                android:textAlignment="gravity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addAppButton" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>